--- a/index.html
+++ b/index.html
@@ -9,9 +9,41 @@
 </head>
 
 <body>
-    <header class="header"></header>
+    <header>
+        <div class="flex bkg">
+            <div class="header-itm def"></div>
+            <div class="header-itm def"></div>
+        </div>
+    </header>
 
-    <main></main>
+    <main>
+        <section class="hero bkg">
+            <div class="bg-container">
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                <div class="flex">
+                    <div class="col30 def"></div>
+                    <div class="col70 def"></div>
+                </div>
+            </div>
+        </section>
+        <section class="plan bkg">
+            <div class="bg-container">
+                <h2>Trova il piano giusto</h2>
+                <div class="radio-botton">
+                    <button>a</button>
+                    <button>b</button>
+                </div>
+                <div class="card-plane flex">
+                    <div class="def col30"></div>
+                    <div class="def col30"></div>
+                    <div class="def col30"></div>
+                </div>
+            </div>
+        </section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
 
     <footer></footer>
 </body>
