--- a/index.html
+++ b/index.html
@@ -27,22 +27,76 @@
             </div>
         </section>
         <section class="plan bkg">
-            <div class="bg-container">
+            <div class="s-container">
                 <h2>Trova il piano giusto</h2>
                 <div class="radio-botton">
                     <button>a</button>
                     <button>b</button>
                 </div>
-                <div class="card-plane flex">
+                <div class="flex just-sb">
                     <div class="def col30"></div>
                     <div class="def col30"></div>
                     <div class="def col30"></div>
                 </div>
             </div>
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section class="enterprise bkg">
+            <div class="s-container">
+                <h2>Team</h2>
+                <div class="flex just-sb">
+                    <div class="col70 def">
+                        <h3>Enterprise</h3>
+                        <p>Cibtatta ufficio vendite</p>
+                        <p>soluzioni personalizzate</p>
+                    </div>
+                    <div class="col30 def">
+                        <button class="btn"> Ciao Ciao</button>
+                        <!-- <button class="col30">ciaciao</button> -->
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="operation bkg">
+            <div class="s-container">
+                <h3>Esegui Operazioni</h3>
+                <div class="flex-wrap just-sb">
+                    <div class="cart col30">
+                        <img src="./img/business-feature-send-files-it.png" alt="">
+                        <h4>passa tempo</h4>
+                        <p>Porta a termine ...</p>
+                    </div>
+                    <div class="cart col30">
+                        <img src="./img/business-feature-send-files-it.png" alt="">
+                        <h4>passa tempo</h4>
+                        <p>Porta a termine ...</p>
+                    </div>
+                    <div class="cart col30">
+                        <img src="./img/business-feature-send-files-it.png" alt="">
+                        <h4>passa tempo</h4>
+                        <p>Porta a termine ...</p>
+                    </div>
+                    <div class="cart col30">
+                        <img src="./img/business-feature-send-files-it.png" alt="">
+                        <h4>passa tempo</h4>
+                        <p>Porta a termine ...</p>
+                    </div>
+                    <div class="cart col30">
+                        <img src="./img/business-feature-send-files-it.png" alt="">
+                        <h4>passa tempo</h4>
+                        <p>Porta a termine ...</p>
+                    </div>
+                    <div class="cart col30">
+                        <img src="./img/business-feature-send-files-it.png" alt="">
+                        <h4>passa tempo</h4>
+                        <p>Porta a termine ...</p>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+        <section class="final-title">
+            
+        </section>
     </main>
 
     <footer></footer>
