--- a/index.html
+++ b/index.html
@@ -90,16 +90,81 @@
                         <h4>passa tempo</h4>
                         <p>Porta a termine ...</p>
                     </div>
-                    
+
                 </div>
             </div>
         </section>
-        <section class="final-title">
-            
+        <section class="final-title bkg">
+            <div class="s-container">
+                <h3>Piu di 500.000 team utilizzano dropbox</h3>
+                <a href="">Scopri di più</a>
+            </div>
         </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer bkg">
+        <div class="bg-container">
+            <div class="flex footer-list">
+                <div>
+                    <h2>Dropbox</h2>
+                    <ul>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Dropbox</h2>
+                    <ul>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Dropbox</h2>
+                    <ul>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Dropbox</h2>
+                    <ul>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Dropbox</h2>
+                    <ul>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                        <li>ciao</li>
+                    </ul>
+                </div>
+            </div>
+            <hr noshade color="red">
+            <div>
+                <span>&euro; Italiano</span>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
