--- a/index.html
+++ b/index.html
@@ -10,10 +10,31 @@
 
 <body>
     <header>
-        <div class="flex bkg">
-            <div class="header-itm def"></div>
-            <div class="header-itm def"></div>
+        <div class="header def">
+            <div class="col15">
+                <img src="./img/logo-small.png" alt="">
+            </div>
+            <div class="flex col70 just-sb">
+                <div class="header-itm">
+                    <ul class="header-list">
+                        <li>Perchè Dropbox</li>
+                        <li>Funzioni</li>
+                        <li>Piani e Prezzi</li>
+                    </ul>
+                </div>
+                <div class="header-itm dx">
+                    <ul class="header-list">
+                        <li>Supporto</li>
+                        <li>Contatta l'Ufficio vendite</li>
+                </div>
+                </ul>
+            </div>
+            <div class="col15">
+                <button class="btn"> Accedi</button>
+                <Button class="btn">Inizia</Button>
+            </div>
         </div>
+        <div class="flex"></div>
     </header>
 
     <main>
