--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <div class="header def">
+        <div class="header">
             <div class="col15">
                 <img src="./img/logo-small.png" alt="">
             </div>
@@ -29,21 +29,28 @@
                 </div>
                 </ul>
             </div>
-            <div class="col15">
-                <button class="btn"> Accedi</button>
-                <Button class="btn">Inizia</Button>
+            <div class="col15 text-right">
+                <a class="btn"> Accedi</a>
+                <a class="btn">Inizia</a>
             </div>
         </div>
         <div class="flex"></div>
     </header>
 
     <main>
-        <section class="hero bkg">
+        <section class="hero">
             <div class="bg-container">
-                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-                <div class="flex">
-                    <div class="col30 def"></div>
-                    <div class="col70 def"></div>
+                <h1>Tutto cio che ti serve per il lavoro, in un unico posto</h1>
+                <div class="hero-flex">
+                    <div class="col30">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit accusamus tenetur deserunt impedit, ut sint laborum, quo neque tempore, numquam quae iure. Dicta mollitia est iure voluptatum. Eius, harum voluptate.
+                        Ducimus quis ad facilis neque commodi cum? Ab porro fuga atque, voluptatibus eum cumque voluptatem quo officia, consectetur quisquam omnis nisi quia enim dolor! Nobis omnis suscipit qui laudantium velit!
+                       </p>
+                       <Button class="btn"> Inizia la Prova Gratuita</Button>
+                    </div>
+                    <div class="col70">
+                        <img src="./img/business-feature-coordinate-it.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
