--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                         Ducimus quis ad facilis neque commodi cum? Ab porro fuga atque, voluptatibus eum cumque voluptatem quo officia, consectetur quisquam omnis nisi quia enim dolor! Nobis omnis suscipit qui laudantium velit!
                        </p>
                        <Button class="btn"> Inizia la Prova Gratuita</Button>
+                       <p>Annulla in qualsiasi Momento</p>
+                       <p class="arrow">&downarrow;</p>
                     </div>
                     <div class="col70">
                         <img src="./img/business-feature-coordinate-it.png" alt="">
@@ -194,5 +196,7 @@
         </div>
     </footer>
 </body>
+
+
 
 </html>
