--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.cdnfonts.com/css/cascadia-code" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -30,8 +34,8 @@
                 </ul>
             </div>
             <div class="col15 text-right">
-                <a class="btn"> Accedi</a>
-                <a class="btn">Inizia</a>
+                <a href="" class="btn"> Accedi</a>
+                <a href="" class="btn">Inizia</a>
             </div>
         </div>
         <div class="flex"></div>
@@ -43,34 +47,115 @@
                 <h1>Tutto cio che ti serve per il lavoro, in un unico posto</h1>
                 <div class="hero-flex">
                     <div class="col30">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit accusamus tenetur deserunt impedit, ut sint laborum, quo neque tempore, numquam quae iure. Dicta mollitia est iure voluptatum. Eius, harum voluptate.
-                        Ducimus quis ad facilis neque commodi cum? Ab porro fuga atque, voluptatibus eum cumque voluptatem quo officia, consectetur quisquam omnis nisi quia enim dolor! Nobis omnis suscipit qui laudantium velit!
-                       </p>
-                       <Button class="btn"> Inizia la Prova Gratuita</Button>
-                       <p>Annulla in qualsiasi Momento</p>
-                       <p class="arrow">&downarrow;</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit accusamus tenetur deserunt
+                            impedit, ut sint laborum, quo neque tempore, numquam quae iure. Dicta mollitia est iure
+                            voluptatum. Eius, harum voluptate.
+                            Ducimus quis ad facilis neque commodi cum? Ab porro fuga atque, voluptatibus eum cumque
+                            voluptatem quo officia, consectetur quisquam omnis nisi quia enim dolor! Nobis omnis
+                            suscipit qui laudantium velit!
+                        </p>
+                        <Button class="btn"> Inizia la Prova Gratuita</Button>
+                        <p>Annulla in qualsiasi Momento</p>
+                        <p class="arrow">&downarrow;</p>
                     </div>
                     <div class="col70">
                         <img src="./img/business-feature-coordinate-it.png" alt="">
                     </div>
                 </div>
-            </div>
-        </section>
-        <section class="plan bkg">
+            </section>
+        </div>
+        <section class="plan">
             <div class="s-container">
-                <h2>Trova il piano giusto</h2>
-                <div class="radio-botton">
-                    <button>a</button>
-                    <button>b</button>
+                <h2 class="py-30">Trova il piano giusto che fa per te</h2>
+                <div class="radio-botton py-30">
+                    <input type="radio" id="mensile" name="fatturazione">
+                    <label for="mensile">Fatturazione Mensile</label>
+                    <input type="radio" id="annuale" name="fatturazione">
+                    <label for="annuale">Fatturazione Annuale</label>
                 </div>
                 <div class="flex just-sb">
-                    <div class="def col30"></div>
-                    <div class="def col30"></div>
-                    <div class="def col30"></div>
+                    <div class="card col30">
+                        <h4><i class="fa-solid fa-user"></i>Singolo</h4>
+                        <div>
+                            <h3>Professional</h3>
+                            <p>12.00 &euro; <br></p>
+                            <p><span>/mese</span></p>
+                        </div>
+                        <ul>
+                            <li><i class="fa-solid fa-user col10"></i><p>1 utente</p></li>
+                            <li><i class="fa-solid fa-user col10"></i><p class="col70">5TB di spazio di archiviazione</p></li>
+                            <li><i class="fa-solid fa-user col10"></i><p class="col70">Lorem ipsum dolor sit amet consectetur </p></li>
+                        </ul>
+                        <a href="" class="btn">Prova Gratis per un mese</a>
+                        <p>oppure<a href="">acquista ora</a></p>
+                        <hr>
+                        <p>Punti Salienti del Piano</p>
+                            <li><i class="fa-solid fa-check clo30"></i><p class="col70">Invia file fino a 100</p>
+                            </li>
+                            <li><i class="fa-solid fa-check clo30"></i><p class="col70">Cartelle offline su dispositivi</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card col30">
+                        <h4><i class="fa-solid fa-user"></i>Singolo</h4>
+                        <div>
+                            <h3>Professional</h3>
+                            <p>12.00 &euro; <br></p>
+                            <p><span>/mese</span></p>
+                        </div>
+                        <ul>
+                            <li><i class="fa-solid fa-user col10"></i><p>1 utente</p></li>
+                            <li><i class="fa-solid fa-user col10"></i><p class="col70">5TB di spazio di archiviazione</p></li>
+                            <li><i class="fa-solid fa-user col10"></i><p class="col70">Lorem ipsum dolor sit amet consectetur </p></li>
+                        </ul>
+                        <a href="" class="btn">Prova Gratis per un mese</a>
+                        <p>oppure<a href="">acquista ora</a></p>
+                        <hr>
+                        <p>Punti Salienti del Piano</p>
+                            <li><i class="fa-solid fa-check clo30"></i><p class="col70">Invia file fino a 100</p>
+                            </li>
+                            <li><i class="fa-solid fa-check clo30"></i><p class="col70">Cartelle offline su dispositivi</p>
+                            </li>
+                            <li><i class="fa-solid fa-check clo30"></i><p class="col70">Cartelle offline su dispositivi</p>
+                            </li>
+                            <li><i class="fa-solid fa-check clo30"></i><p class="col70">Cartelle offline su dispositivi</p>
+                            </li>
+                            <li><i class="fa-solid fa-check clo30"></i><p class="col70">Cartelle offline su dispositivi</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card col30">
+                        <h4><i class="fa-solid fa-user"></i>Singolo</h4>
+                        <div>
+                            <h3>Professional</h3>
+                            <p>12.00 &euro; <br></p>
+                            <p><span>/mese</span></p>
+                        </div>
+                        <ul>
+                            <li><i class="fa-solid fa-user col10"></i><p>1 utente</p></li>
+                            <li><i class="fa-solid fa-user col10"></i><p class="col70">5TB di spazio di archiviazione</p></li>
+                            <li><i class="fa-solid fa-user col10"></i><p class="col70">Lorem ipsum dolor sit amet consectetur </p></li>
+                        </ul>
+                        <a href="" class="btn">Prova Gratis per un mese</a>
+                        <p>oppure<a href="">acquista ora</a></p>
+                        <hr>
+                        <p>Punti Salienti del Piano</p>
+                            <li><i class="fa-solid fa-check clo30"></i><p class="col70">Invia file fino a 100</p>
+                            </li>
+                            <li><i class="fa-solid fa-check clo30"></i><p class="col70">Cartelle offline su dispositivi</p>
+                            </li>
+                            <li><i class="fa-solid fa-check clo30"></i><p class="col70">Cartelle offline su dispositivi</p>
+                            </li>
+                            <li><i class="fa-solid fa-check clo30"></i><p class="col70">Cartelle offline su dispositivi</p>
+                            </li>
+                            <li><i class="fa-solid fa-check clo30"></i><p class="col70">Cartelle offline su dispositivi</p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="enterprise bkg">
+        <section class="enterprise">
             <div class="s-container">
                 <h2>Team</h2>
                 <div class="flex just-sb">
@@ -80,7 +165,7 @@
                         <p>soluzioni personalizzate</p>
                     </div>
                     <div class="col30 def">
-                        <button class="btn"> Ciao Ciao</button>
+                        <a class="btn"> Ciao Ciao</a>
                         <!-- <button class="col30">ciaciao</button> -->
                     </div>
                 </div>
