--- a/index.html
+++ b/index.html
@@ -157,16 +157,33 @@
         </section>
         <section class="enterprise">
             <div class="s-container">
-                <h2>Team</h2>
-                <div class="flex just-sb">
-                    <div class="col70 def">
-                        <h3>Enterprise</h3>
-                        <p>Cibtatta ufficio vendite</p>
-                        <p>soluzioni personalizzate</p>
+                <div class="border">
+                    <h2><i class="fa-solid fa-font-awesome"></i> Team</h2>
+                    <div class="flex just-sb">
+                        <div class="col70 py-30">
+                            <h3>Enterprise</h3>
+                            <p class="subtitle">Contatta ufficio vendite</p>
+                            <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis molestias tempora quas. Reiciendis earum iste enim voluptates eveniet nulla ipsum error eius perspiciatis? Autem laudantium iure sapiente dolore esse deleniti.</p>
+                        </div>
+                        <div class="col30 py-30">
+                            <a class="btn"> Contatta l'ufficio vendite</a>
+                        </div>
                     </div>
-                    <div class="col30 def">
-                        <a class="btn"> Ciao Ciao</a>
-                        <!-- <button class="col30">ciaciao</button> -->
+                </div>
+            </div>
+        </section>
+        <section class="partner">
+            <div class="s-container">
+                <div>
+                    <div class="flex just-sb">
+                        <div class="col60 py-30">
+                            <img src="./img/partner.png" alt="">
+                        </div>
+                        <div class="col30 py-30">
+                            <h3>Entra in contatto con un partner Dropbox</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quos quod perspiciatis nihil explicabo. Beatae odio placeat assumenda. Quos quod magni libero expedita atque hic itaque aspernatur, voluptatibus blanditiis harum!</p>
+                            <a href="" class="btn"> Trova un Partner</a>
+                        </div>
                     </div>
                 </div>
             </div>
