--- a/index.html
+++ b/index.html
@@ -188,39 +188,39 @@
                 </div>
             </div>
         </section>
-        <section class="operation bkg">
+        <section class="operation">
             <div class="s-container">
-                <h3>Esegui Operazioni</h3>
+                <h3>Esegui più Operazioni con Dropbox Business</h3>
                 <div class="flex-wrap just-sb">
-                    <div class="cart col30">
-                        <img src="./img/business-feature-send-files-it.png" alt="">
-                        <h4>passa tempo</h4>
-                        <p>Porta a termine ...</p>
+                    <div class="card col30">
+                        <img src="./img/business-feature-integrations-it.png" alt="">
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
                     </div>
-                    <div class="cart col30">
+                    <div class="card col30">
                         <img src="./img/business-feature-send-files-it.png" alt="">
-                        <h4>passa tempo</h4>
-                        <p>Porta a termine ...</p>
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
                     </div>
-                    <div class="cart col30">
+                    <div class="card col30">
                         <img src="./img/business-feature-send-files-it.png" alt="">
-                        <h4>passa tempo</h4>
-                        <p>Porta a termine ...</p>
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
                     </div>
-                    <div class="cart col30">
+                    <div class="card col30">
                         <img src="./img/business-feature-send-files-it.png" alt="">
-                        <h4>passa tempo</h4>
-                        <p>Porta a termine ...</p>
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
                     </div>
-                    <div class="cart col30">
+                    <div class="card col30">
                         <img src="./img/business-feature-send-files-it.png" alt="">
-                        <h4>passa tempo</h4>
-                        <p>Porta a termine ...</p>
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
                     </div>
-                    <div class="cart col30">
+                    <div class="card col30">
                         <img src="./img/business-feature-send-files-it.png" alt="">
-                        <h4>passa tempo</h4>
-                        <p>Porta a termine ...</p>
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
                     </div>
 
                 </div>
