--- a/index.html
+++ b/index.html
@@ -193,32 +193,32 @@
                 <h3>Esegui più Operazioni con Dropbox Business</h3>
                 <div class="flex-wrap just-sb">
                     <div class="card col30">
+                        <img src="./img/business-feature-switching-tools.png" alt="">
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
+                    </div>
+                    <div class="card col30">
+                        <img src="./img/business-feature-send-files-it.png" alt="">
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
+                    </div>
+                    <div class="card col30">
+                        <img src="./img/business-feature-coordinate-it.png" alt="">
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
+                    </div>
+                    <div class="card col30">
+                        <img src="./img/business-feature-security.png" alt="">
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
+                    </div>
+                    <div class="card col30">
+                        <img src="./img/business-feature-multi-device.png" alt="">
+                        <h4>Passa di meno da uno strumento all'altro</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
+                    </div>
+                    <div class="card col30">
                         <img src="./img/business-feature-integrations-it.png" alt="">
-                        <h4>Passa di meno da uno strumento all'altro</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
-                    </div>
-                    <div class="card col30">
-                        <img src="./img/business-feature-send-files-it.png" alt="">
-                        <h4>Passa di meno da uno strumento all'altro</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
-                    </div>
-                    <div class="card col30">
-                        <img src="./img/business-feature-send-files-it.png" alt="">
-                        <h4>Passa di meno da uno strumento all'altro</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
-                    </div>
-                    <div class="card col30">
-                        <img src="./img/business-feature-send-files-it.png" alt="">
-                        <h4>Passa di meno da uno strumento all'altro</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
-                    </div>
-                    <div class="card col30">
-                        <img src="./img/business-feature-send-files-it.png" alt="">
-                        <h4>Passa di meno da uno strumento all'altro</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
-                    </div>
-                    <div class="card col30">
-                        <img src="./img/business-feature-send-files-it.png" alt="">
                         <h4>Passa di meno da uno strumento all'altro</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore distinctio ad quas natus, similique voluptatibus fugit, illum cum accusantium sequi quae eius dolore iusto aliquam quia ut veritatis deserunt.</p>
                     </div>
@@ -226,15 +226,15 @@
                 </div>
             </div>
         </section>
-        <section class="final-title bkg">
+        <section class="final-title">
             <div class="s-container">
-                <h3>Piu di 500.000 team utilizzano dropbox</h3>
-                <a href="">Scopri di più</a>
+                <h3>Piu di 500.000 team utilizzano <br>Dropbox Business</h3>
+                <a href="">Scopri di più sui nostrri clienti</a>
             </div>
         </section>
     </main>
 
-    <footer class="footer bkg">
+    <footer class="footer">
         <div class="bg-container">
             <div class="flex footer-list">
                 <div>
@@ -292,8 +292,8 @@
                 </div>
             </div>
             <hr noshade color="red">
-            <div>
-                <span>&euro; Italiano</span>
+            <div class="nation">
+                <span><i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-caret-down"></i></span>
             </div>
         </div>
     </footer>
